ribbit/tests/ui/arbitrary_nonzero.stderr
error: Nonzero arbitrary sizes are currently unsupported
 --> tests/ui/arbitrary_nonzero.rs:5:27
  |
5 | #[ribbit::pack(size = 15, nonzero)]
  |                           ^^^^^^^
